# ica-cpp-version

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  understandingPointers.cpp
data/: barkers_boutique_stock_list_example.csv  mead_modernity_stock_list_example.csv
include/: CMakeLists.txt  adapter.cpp  adapter.h  base.h  bbstock.cpp  bbstock.h  mmstock.cpp  mmstock.h
